--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ lerna-debug.log*
 
 serviceAccountKey.json
 
+samplefile.json
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
